<resources>

    //Menu
    <string name="app_name">TU Graz Suche</string>
    <string name="menu_home">Home</string>
    <string name="menu_organisation">Organisation</string>
    <string name="menu_person">Person</string>
    <string name="menu_room">Room</string>
    <string name="menu_lv">Course</string>
    <string name="menu_news">News</string>
    <string name="menu_events">Events</string>
    <string name="menu_organisation_detail">Organisation data</string>
    <string name="menu_about">About</string>

    //Labels
    <string name="openMaps">Open in Maps</string>
    <string name="openBusinessCard">Open TUGRAZonline business card</string>
    <string name="tel">Telephon</string>
    <string name="mail">Email</string>
    <string name="website">Website</string>
    <string name="name">Name</string>
    <string name="purpose">Purpose</string>
    <string name="place">Location</string>
    <string name="notFound">Not found</string>
    <string name="min2">enter at least 2 characters</string>
    <string name="min3">enter at least 3 characters</string>
    <string name="noInternet">No internet connection</string>
    <string name="noResults">No entities found</string>
    <string name="iconSearch">search</string>
    <string name="iconCopyright">Icon made by Smashicons from www.flaticon.com</string>
    <string name="lizenz">Picasso Downloader Copyright 2013 Square, Inc.Licensed under the Apache License, Version 2.0 (the "License");
        You may obtain a copy of the License at   http://www.apache.org/licenses/LICENSE-2.0.
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
        THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS \"AS IS\" AND ANY EXPRESS OR IMPLIED WARRANTIES,
        INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
        IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY,
        OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA,
        OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
        OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE."</string>
    <string name="PersonSearchHint">Search Person</string>
    <string name="RoomSearchHint">Search Room</string>
    <string name="CourseSearchHint">Search Course</string>
    <string name="OrganisationSearchHint">Search Organisation</string>
    <string name="app_widget_description">TUGSearch Widget</string>


</resources>
