<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/people"
            android:title="@string/menu_person" />
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/room"
            android:title="@string/menu_room" />
        <item
            android:id="@+id/nav_lv"
            android:icon="@drawable/lecture"
            android:title="@string/menu_lv" />
        <item
            android:id="@+id/nav_organisation"
            android:icon="@drawable/organization"
            android:title="@string/menu_organisation" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/event"
            android:title="@string/menu_events" />
</menu>
