<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@drawable/beige_background_rounded"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/tug_logo" />

    <StackView
        android:id="@+id/stack_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:loopViews="true" />

    <RelativeLayout
        android:id="@+id/event_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/widget_item_rounded">

        <ImageView
            android:id="@+id/event_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:background="@color/tugBlue"
            android:contentDescription="@string/menu_events"
            android:src="@drawable/event" />

        <TextView
            android:id="@+id/event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/event_icon"
            android:ellipsize="end"
            android:maxLines="4"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Mach Dich fit!" />

        <TextView
            android:id="@+id/event_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_title"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/event_icon"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="Seminar" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/search_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/person_search"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/person_rounded"
            android:tint="@color/tugBlue" />

        <ImageView
            android:id="@+id/room_search"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/room_rounded"
            android:tint="@color/tugBlue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_views_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/person_search_text"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/PersonSearchHint"
            android:textColor="@color/tugBlue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/room_search_text"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/RoomSearchHint"
            android:textColor="@color/tugBlue"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_views_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/course_search"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/course_rounded"
            android:tint="@color/tugBlue" />

        <ImageView
            android:id="@+id/organization_search"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/organization_rounded"
            android:tint="@color/tugBlue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_views_two_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/course_search_text"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/CourseSearchHint"
            android:textColor="@color/tugBlue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/organization_search_text"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/OrganisationSearchHint"
            android:textColor="@color/tugBlue"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>