<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organisationScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/organisationDetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/textBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/organisationDetailAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/textBlack"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/organisationDetailName" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/organisationDetailAdress" />

        <LinearLayout
            android:id="@+id/organisationLinearLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider7">

            <TextView
                android:id="@+id/organisationDetailEmailLable"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/mail"
                android:textAlignment="textEnd"
                android:textColor="@color/textBlue"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/organisationDetailEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:textColor="@color/textBlack"
                android:textSize="17sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/organisationLinearLayoutWebsite"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/organisationLinearLayoutEmail">

            <TextView
                android:id="@+id/organisationDetailWebsiteLable"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/website"
                android:textAlignment="textEnd"
                android:textColor="@color/textBlue"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/organisationDetailWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:textColor="@color/textBlack"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider11"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/organisationLinearLayoutWebsite" />


        <TextView
            android:id="@+id/organisationDetailTugonline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/openBusinessCard"
            android:textColor="@color/textBlue"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider11" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/organisationDetailTugonline" />

        <TextView
            android:id="@+id/organisationDetailOpenMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/openMaps"
            android:textAlignment="center"
            android:textColor="@color/textBlue"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <fragment
            android:id="@+id/organisationDetailMapView"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/organisationDetailOpenMaps"
            tools:context=".activity.MainActivity" />

        <TextView
            android:id="@+id/organisationDetailMapOverlay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#90FFFFFF"
            android:gravity="center"
            android:text="@string/notFound"
            android:textAlignment="center"
            android:textColor="@color/textBlack"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/organisationDetailMapView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>